add ui elements and initial styling

--- a/index.html
+++ b/index.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <script src="./scripts.js" defer></script>
+
+    <div class="calculator-container">
+        <div class="display">
+            <span>5</span>
+        </div>
+        <div class="button-container">
+            <div class="left-buttons">
+                <button id="seven">7</button>
+                <button id="eight">8</button>
+                <button id="nine">9</button>
+                <button id="four">4</button>
+                <button id="five">5</button>
+                <button id="six">6</button>
+                <button id="one">1</button>
+                <button id="two">2</button>
+                <button id="three">3</button>
+                <button id="clear">C</button>
+                <button id="zero">0</button>
+                <button id="decimal">.</button>
+            </div>
+            <div class="right-buttons">
+                <button id="divide">÷</button>
+                <button id="multiply">×</button>
+                <button id="subtract">−</button>
+                <button id="add">+</button>
+            </div>
+            
+            
+        </div>
+    </div>
 </body>
 </html>
