--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="calculator-container">
         <div class="display">
-            <span>5</span>
+            <span></span>
         </div>
         <div class="button-container">
             <div class="left-buttons">
