add equals button and styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="calculator-container">
         <div class="display">
-            <span></span>
+            <span>0</span>
         </div>
         <div class="button-container">
             <div class="left-buttons">
@@ -34,6 +34,7 @@
                 <button id="subtract">−</button>
                 <button id="add">+</button>
             </div>
+            <button id="equals">=</button>
             
             
         </div>
