add and fix functionality in accordance to spec

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 <button id="subtract">−</button>
                 <button id="add">+</button>
             </div>
-            <button id="equals">=</button>
+            <div class="equals">
+                <button id="equals">=</button>
+            </div>
             
             
         </div>
